Started with CSS

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="cv">
         <div class="cv-inner">
 
-            <div class="cv-items">
+            <div class="cv-items-left">
                 <div class="cv-item-profile">
-                    <h1>Christoffer Riquelme</h1>
-                    <img src="/IMG/IMG_0085.JPG" alt="image">
+                    <h1>Christoffer</h1><h1>Riquelme</h1>
+                    <img src="/IMG/IMG_0085.JPG" alt="image" class="profile-image">
                 </div>
                 <div class="cv-item-contact">
                     <h2>Kontakt</h2>
@@ -43,7 +43,7 @@
                 </div>
             </div>
 
-            <div class="cv-items">
+            <div class="cv-items-right">
                 <div class="cv-item-info">
                     <h3>Frontend utvecklare</h3>
                     <p>---------------------</p>
